Ajuste de subido
Ajuste na subida anterior onde faltou alguns arquivos

--- a/APP/app/src/main/AndroidManifest.xml
+++ b/APP/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.unip.tcc.eiaapp">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".CadastroActivity"></activity>
         <activity android:name=".PrimeiraTelaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
