--- a/APP/app/src/main/AndroidManifest.xml
+++ b/APP/app/src/main/AndroidManifest.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.unip.tcc.eiaapp">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MenuActivity"></activity>
-        <activity android:name=".ChatActivity"></activity>
-        <activity android:name=".CadastroActivity"></activity>
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".HumorActivity"></activity>
+        <activity android:name=".MenuActivity" />
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".CadastroActivity" />
         <activity android:name=".PrimeiraTelaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
