Adição da tela de Humor
Adição da tela de humor e de histórico emocional

--- a/APP/app/src/main/AndroidManifest.xml
+++ b/APP/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".HumorActivity"></activity>
-        <activity android:name=".MenuActivity" />
+        <activity android:name=".GraficoActivity"></activity>
+        <activity android:name=".HumorActivity" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".CadastroActivity" />
         <activity android:name=".PrimeiraTelaActivity">
@@ -23,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
