--- a/APP/app/build.gradle
+++ b/APP/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'com.xwray:groupie:2.8.1'
+
+    implementation 'com.jjoe64:graphview:4.2.2'
 }
